# astrum-rs

./: .codespellrc  .pre-commit-config.yaml  CRITICAL-pcb-mpu-region-override.md  CRITICAL-peripheral-regions-dead-code.md  CRITICAL-port-bug05-trigger-deschedule.md  CRITICAL-port-bug06-blocking-no-partner.md  CRITICAL-port-bug07-shared-mpu-overlap-invariant.md  CRITICAL-port-bug08-harness-debug-drain.md  CRITICAL-port-bug09-validate-ptr-rejects-user-stacks.md  CRITICAL-port-bug10-mpu-overlap-exclusive-only.md  CRITICAL-port-bug11-pendsv-clobbers-callee-saved.md  Cargo.toml  Makefile  README.md  ROADMAP.md  codex-privilege-enforcement.md  doc-kernel-new-struct-move-invariant.md
boards/: .gitignore  Cargo.toml  README.md
boards/f207/: Cargo.toml  build.rs  device.x  memory.x  memory_master.x
boards/f207/.cargo/: config.toml
boards/f207/examples/: mpu_kernel_demo.rs  rtt_hello.rs  stochastic_fault_m3.rs  tiny_kernel.rs
boards/f207/src/: lib.rs
boards/f429zi/: .gitignore  Cargo.toml  EXAMPLES.md  README.md  build.rs  device.x  host_serial.py  host_serial_echo.py  memory.x  memory_master.x  run_echo_server.sh  uart_dma_echo_host.py  uart_dma_host.py  uart_usb_pipeline_host.py  vdev_uart_test.py
boards/f429zi/.cargo/: config.toml
boards/f429zi/examples/: adc_temp_probe.rs  adversarial_test.rs  all_faulted_idle.rs  bad_pointer_test.rs  blackboard_demo.rs  blinky.rs  bme280_partition.rs  buf_dma_demo.rs  buf_lend_demo.rs  buf_transfer_usb.rs  button_isr_demo.rs  context_switch.rs  context_switch_ipc.rs  context_switch_mpu.rs  context_switch_mpu_dynamic.rs  context_switch_schedule.rs  context_switch_svc.rs  dma_smoketest.rs  dual_temp_2part.rs  dual_temp_3part.rs  events_demo.rs  events_dprint_demo.rs  fault_restart_demo.rs  fault_survive_test.rs  four_part_test.rs  fpu_context_test.rs  gpio_blinky.rs  hal_gpio_blink.rs  hal_gpio_blink_mpu.rs  health_monitor_demo.rs  health_partition_hw.rs  i2c_scan.rs  ipc_stress.rs  mpu_basic.rs  mpu_info.rs  mpu_kernel_demo.rs  msg_demo.rs  mutex_demo.rs  plib_demo.rs  privilege_escalation_test.rs  (+34 more)
boards/f429zi/hw-tests/: Cargo.toml
boards/f429zi/src/: lib.rs
boards/lm3s/: Cargo.toml
boards/lm3s/src/: hw_uart.rs  lib.rs  pwm.rs  uart_hal.rs
boards/nrf52/: Cargo.toml  build.rs  device.x  memory.x
boards/nrf52/.cargo/: config.toml
boards/nrf52/examples/: adversarial_test.rs  blackboard_demo.rs  blinky.rs  events_demo.rs  fpu_context_test.rs  hal_gpio_blink_mpu.rs  (+10 more)
boards/same51_curiosity/: Cargo.toml  README.md  build.rs  device.x  memory.x  uart_dma_host.py
boards/scripts/: hal-clone.sh
bsp-stm32f4/: Cargo.toml  build.rs  memory.x
bsp-stm32f4/examples/: adversarial_survive.rs
bsp-stm32f4/src/: lib.rs
kernel/: Cargo.toml  build.rs  memory.x
kernel/examples/: adversarial_mod_stub.rs  adversarial_survive.rs  all_faulted_idle_test.rs  all_syscalls_smoke_test.rs  asymmetric_periph_test.rs  bench_context_switch.rs  blackboard_demo.rs  blocking_deschedule.rs  boot_banner_test.rs  buf_align_boot_test.rs  buf_deadline_test.rs  buf_error_test.rs  buf_lend_addr_test.rs  buf_lend_ro_test.rs  buf_lend_rw_test.rs  buf_transfer_test.rs  buffer_pool_test.rs  builder_periph_test.rs  callee_save_check.rs  context_switch.rs  debug_boot.rs  dropped_tick_test.rs  error_handler_test.rs  fault_restart_exhaust_test.rs  get_time_test.rs  health_partition_test.rs  health_stall_detect_test.rs  hello.rs  hw_fpu_isolation.rs  hw_integration.rs  integration.rs  irq_ack_error_test.rs  irq_ack_multi_test.rs  irq_ack_test.rs  irq_clearbit_test.rs  irq_custom_handler_test.rs  irq_disable_test.rs  irq_dispatch_test.rs  irq_kernel_clears_test.rs  irq_mixed_model_test.rs  (+91 more)
kernel/expected/: README.md  adversarial_survive.expected  all_faulted_idle_test.expected  all_syscalls_smoke_test.expected  asymmetric_periph_test.expected  blackboard_demo.expected  blocking_deschedule.expected  boot_banner_test.expected  buf_align_boot_test.expected  callee_save_check.expected  context_switch.expected  disable_interrupts.expected  dropped_tick_test.expected  fault_restart_exhaust_test.expected  get_time_test.expected  integration.expected  irq_never_mask_handler_test.expected  irq_never_mask_test.expected  last_partition_faults_test.expected  mpu_cached_test.expected  mpu_enforce_test.expected  mpu_fault.expected  mpu_partition.expected  mpu_periph_precompute_test.expected  mpu_precompute_test.expected  mpu_region.expected  mpu_wx.expected  partition_switch.expected  pendstclr_systick_test.expected  pendsv_primask_leak_test.expected  pendsv_primask_test.expected  pendsv_stack_overflow_test.expected  priv_drop_test.expected  priv_fault_test.expected  qemu_pac_adc0.expected  qemu_pac_i2c0.expected  qemu_pac_ssi0.expected  qemu_pac_uart0.expected  qemu_smoke.expected  qemu_smoke_4k.expected  (+23 more)
kernel/src/: api.rs  blackboard.rs  boot.rs  buf_syscall.rs  buffer_pool.rs  config.rs  context.rs  debug.rs  error_handler.rs  events.rs  fault.rs  harness.rs  health.rs  hw_uart.rs  invariants.rs  ipc_integrity_tests.rs  irq_ack.rs  irq_dispatch.rs  kernel.rs  kernel_ptr.rs  klog.rs  kpanic.rs  layout_checks.rs  lib.rs  loom_compat.rs  macros.rs  memmanage.rs  message.rs  mpu.rs  mpu_strategy.rs  msg_pools.rs  mutex.rs  partition.rs  partition_core.rs  partition_debug.rs  pendsv.rs  pendsv_asm.rs  plib.rs  port_pools.rs  queuing.rs  (+27 more)
kernel/tests/: adversarial_tests.rs  compile_fail.rs  feature_conflict.rs  loom_mutex.rs  loom_queuing.rs  loom_sampling.rs  loom_semaphore.rs  loom_waitqueue.rs
plib/: Cargo.toml
plib/src/: lib.rs  pwm.rs
porting_guide/: Cargo.toml  README.md  build.rs
porting_guide/examples/: 00_context_switch.rs  01_mpu_static.rs  02_mpu_dynamic.rs  03_svc_handler.rs  04_schedule_table.rs  05_sampling_port.rs  06_kernel_minimal.rs  07_queuing_ports.rs  08_semaphores.rs  09_full_demo.rs
porting_guide/src/: lib.rs
rtos-traits/: Cargo.toml
rtos-traits/src/: api.rs  buf_syscall.rs  debug.rs  device.rs  fmt.rs  hal.rs  i2c.rs  ids.rs  isr_ring.rs  lib.rs  macros.rs  partition.rs  register.rs  spi.rs  syscall.rs  test_register.rs  thread.rs  uart.rs
(+141 files in other folders)
