[workspace]
members = ["kernel", "rtos-traits", "bsp-nrf52840", "bsp-stm32f4", "bsp-atsamd51"]
resolver = "2"

# Dev profile: full debug symbols and no optimisation for GDB debugging.
# These are Cargo defaults, but we state them explicitly so that
# `cargo build` always produces DWARF info suitable for step-debugging
# with GDB / OpenOCD / QEMU.
[profile.dev]
debug = true
opt-level = 0
