[workspace]
members = ["kernel", "plib", "rtos-traits", "bsp-nrf52840", "bsp-stm32f4", "bsp-atsamd51", "porting_guide", "boards/lm3s"]
resolver = "2"

# Dev profile: debug symbols with basic optimisation (opt-level = 1).
# opt-level = 1 enables NRVO and dead-code elimination while preserving
# most DWARF debug info for GDB / OpenOCD / QEMU step-debugging.
# Required because Kernel<C> with large stack tiers (AlignedStack4K)
# exceeds the 28 KiB MSP stack at opt-level = 0 due to by-value returns.
[profile.dev]
debug = true
opt-level = 1
