[workspace]
members = ["kernel", "plib", "rtos-traits", "porting_guide", "boards/lm3s"]
exclude = ["boards/f429zi", "boards/nrf52", "boards/f207", "boards/f407", "boards/same51_curiosity"]
resolver = "2"

# Dev profile: debug symbols with basic optimisation (opt-level = 1).
# opt-level = 1 enables NRVO and dead-code elimination while preserving
# most DWARF debug info for GDB / OpenOCD / QEMU step-debugging.
# Required because Kernel<C> with large stack tiers (AlignedStack4K)
# exceeds the 28 KiB MSP stack at opt-level = 0 due to by-value returns.
[profile.dev]
debug = true
opt-level = 1
