[workspace]
members = []
# f429zi and nrf52 have their own [profile] settings (opt-level=1 for NRVO, etc.)
# that are ignored when they're workspace members. They also use path deps resolved
# relative to their own Cargo.toml. Exclude them so they act as standalone workspaces.
# Build them standalone: cd f429zi && cargo build ...
exclude = ["same51_curiosity", "f429zi", "nrf52", "f407", "f207", "lm3s"]
resolver = "3"

[profile.dev]
opt-level = "s"
codegen-units = 1
panic = "abort"

[profile.release]
opt-level = "s"
codegen-units = 1
lto = "fat"
debug = 2
panic = "abort"
