[package]
name = "bsp-stm32f4"
version = "0.1.0"
edition = "2021"

[dependencies]
kernel = { path = "../kernel" }
rtos-traits = { path = "../rtos-traits" }
stm32f4 = { version = "0.15", features = ["stm32f429", "rt"] }
cortex-m = "0.7"
cortex-m-rt = "0.7"
# Crates below are needed at BSP level because kernel macros expand
# paths (e.g. rtt_target::rprintln!, cortex_m_semihosting::hprintln!)
# at the call site rather than via $crate.
heapless = "0.8"
rtt-target = { version = "0.6", optional = true }
critical-section = { version = "1.2", optional = true }
cortex-m-semihosting = { version = "0.5", optional = true }
defmt = { version = "0.3", optional = true }

[features]
fpu-context = ["kernel/fpu-context"]
log-rtt = ["kernel/log-rtt", "dep:rtt-target", "dep:critical-section"]
# Forward every kernel feature that macros check via cfg so that
# --all-features keeps the BSP and kernel cfg flags in sync.
log-semihosting = ["kernel/log-semihosting", "dep:cortex-m-semihosting"]
log-swo = ["kernel/log-swo"]
log-defmt = ["kernel/log-defmt", "dep:defmt"]
dynamic-mpu = ["kernel/dynamic-mpu"]
qemu = ["kernel/qemu"]
partition-debug = ["kernel/partition-debug"]

[[example]]
name = "adversarial_survive"
required-features = ["log-rtt"]
