[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7", features = ["device"] }
cortex-m-semihosting = { version = "0.5", optional = true }
defmt = { version = "0.3", optional = true }
heapless = "0.8"
panic-halt = { version = "1.0", optional = true }
panic-rtt-target = { version = "0.2", optional = true }
panic-semihosting = { version = "0.6", features = ["exit"], optional = true }
rtos-traits = { path = "../rtos-traits" }
rtt-target = { version = "0.5", optional = true }

[[example]]
name = "hello"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "panic_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "kpanic_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "mpu_info"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "mpu_region"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "systick"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "mpu_wx"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "mpu_fault"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "partition_switch"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "context_switch"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "scheduler_tick"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "mpu_partition"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "svc_yield"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "integration"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "sampling_demo"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "queuing_demo"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "blackboard_demo"
required-features = ["qemu", "log-semihosting", "ipc-blackboard"]

[[example]]
name = "priv_drop_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "mpu_enforce_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "mpu_cached_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "mpu_context_switch_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "priv_fault_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "get_time_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "blocking_deschedule"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "unified_minimal"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "qemu_smoke"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "qemu_custom_ivt"
required-features = ["qemu", "log-semihosting", "custom-ivt"]

[[example]]
name = "irq_dispatch_test"
required-features = ["qemu", "log-semihosting", "custom-ivt"]

[[example]]
name = "irq_multi_test"
required-features = ["qemu", "log-semihosting", "custom-ivt"]

[[example]]
name = "irq_ack_test"
required-features = ["qemu", "log-semihosting", "custom-ivt"]

[[example]]
name = "irq_kernel_clears_test"
required-features = ["qemu", "log-semihosting", "custom-ivt"]

[[example]]
name = "irq_simultaneous_test"
required-features = ["qemu", "log-semihosting", "custom-ivt"]

[[example]]
name = "irq_ack_multi_test"
required-features = ["qemu", "log-semihosting", "custom-ivt"]

[[example]]
name = "irq_ack_error_test"
required-features = ["qemu", "log-semihosting", "custom-ivt"]

[[example]]
name = "irq_clearbit_test"
required-features = ["qemu", "log-semihosting", "custom-ivt"]

[[example]]
name = "irq_mixed_model_test"
required-features = ["qemu", "log-semihosting", "custom-ivt"]

[[example]]
name = "irq_repend_stress_test"
required-features = ["qemu", "log-semihosting", "custom-ivt"]

[[example]]
name = "irq_unbound_test"
required-features = ["qemu", "log-semihosting", "custom-ivt"]

[[example]]
name = "irq_custom_handler_test"
required-features = ["qemu", "log-semihosting", "custom-ivt"]

[[example]]
name = "irq_ring_buffer_test"
required-features = ["qemu", "log-semihosting", "custom-ivt"]

[[example]]
name = "irq_ring_overflow_test"
required-features = ["qemu", "log-semihosting", "custom-ivt"]

[[example]]
name = "irq_disable_test"
required-features = ["qemu", "log-semihosting", "custom-ivt"]

[[example]]
name = "systick_preempt_test"
required-features = ["qemu", "log-semihosting", "custom-ivt"]

[[example]]
name = "uart_irq_demo"
required-features = ["qemu", "log-semihosting", "custom-ivt"]

[[example]]
name = "all_syscalls_smoke_test"
required-features = ["qemu", "log-semihosting", "ipc-blackboard"]

[[example]]
name = "smoke_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "peripheral_passthrough"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "debug_boot"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "hw_integration"

[[example]]
name = "mpu_dynamic"
required-features = ["qemu", "log-semihosting", "dynamic-mpu"]

[[example]]
name = "mpu_dynamic_test"
required-features = ["qemu", "log-semihosting", "dynamic-mpu"]

[[example]]
name = "buffer_pool_test"
required-features = ["qemu", "log-semihosting", "dynamic-mpu"]

[[example]]
name = "buf_lend_rw_test"
required-features = ["qemu", "log-semihosting", "dynamic-mpu"]

[[example]]
name = "buf_lend_ro_test"
required-features = ["qemu", "log-semihosting", "dynamic-mpu"]

[[example]]
name = "buf_transfer_test"
required-features = ["qemu", "log-semihosting", "dynamic-mpu"]

[[example]]
name = "buf_lend_addr_test"
required-features = ["qemu", "log-semihosting", "dynamic-mpu"]

[[example]]
name = "buf_deadline_test"
required-features = ["qemu", "log-semihosting", "dynamic-mpu"]

[[example]]
name = "buf_error_test"
required-features = ["qemu", "log-semihosting", "dynamic-mpu"]

[[example]]
name = "virtual_uart_demo"
required-features = ["qemu", "log-semihosting", "dynamic-mpu"]

[[example]]
name = "uart1_loopback"
required-features = ["qemu", "log-semihosting", "dynamic-mpu"]

[[example]]
name = "mpu_precompute_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "mpu_periph_precompute_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "mpu_dynamic_base_test"
required-features = ["qemu", "log-semihosting", "dynamic-mpu"]

[[example]]
name = "mpu_cached_dynamic_test"
required-features = ["qemu", "log-semihosting", "dynamic-mpu"]

[[example]]
name = "pendsv_primask_dynamic_test"
required-features = ["qemu", "log-semihosting", "dynamic-mpu"]

[[example]]
name = "plib_abi_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "plib_mutex_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "plib_sem_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "plib_msg_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "plib_event_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "plib_sampling_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "plib_queuing_status_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "plib_queuing_timed_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "plib_queuing_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "plib_bb_test"
required-features = ["qemu", "log-semihosting", "ipc-blackboard"]

[[example]]
name = "plib_buf_lend_test"
required-features = ["qemu", "log-semihosting", "dynamic-mpu"]

[[example]]
name = "plib_buf_test"
required-features = ["qemu", "log-semihosting", "dynamic-mpu"]

[[example]]
name = "plib_debug_print_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "plib_irq_ack_test"
required-features = ["qemu", "log-semihosting", "custom-ivt"]

[[example]]
name = "plib_dev_test"
required-features = ["qemu", "log-semihosting", "dynamic-mpu"]

[[example]]
name = "plib_dev_read_timed_test"
required-features = ["qemu", "log-semihosting", "dynamic-mpu"]

[[example]]
name = "plib_query_bh_test"
required-features = ["qemu", "log-semihosting", "dynamic-mpu"]

[[example]]
name = "plib_sleep_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "callee_save_check"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "pendsv_primask_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "pendsv_primask_leak_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "svcall_primask_clear_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "svcall_basepri_clear_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "tick_fairness_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "starvation_detect_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "dropped_tick_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "adversarial_mod_stub"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "read_kernel_mem"
path = "examples/adversarial/read_kernel_mem.rs"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "read_other_stack"
path = "examples/adversarial/read_other_stack.rs"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "write_other_stack"
path = "examples/adversarial/write_other_stack.rs"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "stack_guard"
path = "examples/adversarial/stack_guard.rs"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "write_mpu_regs"
path = "examples/adversarial/write_mpu_regs.rs"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "syscall_other_ptr"
path = "examples/adversarial/syscall_other_ptr.rs"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "syscall_bad_ptrs"
path = "examples/adversarial/syscall_bad_ptrs.rs"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "syscall_bad_ids"
path = "examples/adversarial/syscall_bad_ids.rs"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "disable_interrupts"
path = "examples/adversarial/disable_interrupts.rs"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "write_kernel_mem"
path = "examples/adversarial/write_kernel_mem.rs"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "write_control"
path = "examples/adversarial/write_control.rs"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "syscall_kernel_ptr"
path = "examples/adversarial/syscall_kernel_ptr.rs"
required-features = ["qemu", "log-semihosting"]

[features]
default = ["arinc-compat"]

# IPC primitives (optional, enabled via arinc-compat by default)
ipc-sampling = []
ipc-queuing = []
ipc-blackboard = ["plib/ipc-blackboard"]
ipc-message = []

# ARINC 653 compatibility: enables all optional IPC primitives
arinc-compat = ["ipc-sampling", "ipc-queuing", "ipc-blackboard", "ipc-message"]

# Omit the built-in minimal __INTERRUPTS vector table so that a
# custom one (e.g. from bind_interrupts!) can be linked instead.
custom-ivt = []
qemu = []
dynamic-mpu = ["rtos-traits/dynamic-mpu", "plib/dynamic-mpu"]
partition-debug = ["rtos-traits/partition-debug"]
panic-halt = ["dep:panic-halt"]
log-semihosting = ["dep:cortex-m-semihosting", "dep:panic-semihosting"]
log-rtt = ["dep:rtt-target", "dep:panic-rtt-target"]
log-swo = []
log-defmt = ["dep:defmt"]

# Multi-core: removes StaticIsrRing Sync impl (IRQ-masking insufficient on SMP).
# Use `single-core` as an explicit override when both are enabled (--all-features).
multi-core = []
single-core = []

[dev-dependencies]
plib = { path = "../plib" }
