[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7", features = ["device"] }
critical-section = { version = "1.2", optional = true } # TODO: reviewer false positive – dep exists; trace feature's dep:critical-section is valid
cortex-m-semihosting = { version = "0.5", optional = true }
defmt = { version = "0.3", optional = true }
heapless = "0.8"
panic-halt = { version = "1.0", optional = true }
panic-rtt-target = { version = "0.2", optional = true }
panic-semihosting = { version = "0.6", features = ["exit"], optional = true }
rtos-traits = { path = "../rtos-traits" }
rtos-trace = { version = "0.2", default-features = false, optional = true }
rtt-target = { version = "0.6", optional = true }
tudelft-lm3s6965-pac = { version = "0.1", optional = true }

[[example]]
name = "hello"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "panic_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "kpanic_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "mpu_info"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "mpu_region"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "systick"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "mpu_wx"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "mpu_fault"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "partition_switch"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "context_switch"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "scheduler_tick"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "mpu_partition"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "svc_yield"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "integration"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "sampling_demo"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "queuing_demo"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "blackboard_demo"
required-features = ["qemu", "log-semihosting", "ipc-blackboard"]

[[example]]
name = "priv_drop_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "mpu_enforce_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "mpu_cached_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "mpu_context_switch_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "priv_fault_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "get_time_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "blocking_deschedule"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "offset_validation_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "unified_minimal"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "qemu_smoke"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "qemu_smoke_4k"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "qemu_custom_ivt"
required-features = ["qemu", "log-semihosting", "custom-ivt"]

[[example]]
name = "irq_dispatch_test"
required-features = ["qemu", "log-semihosting", "custom-ivt"]

[[example]]
name = "irq_multi_test"
required-features = ["qemu", "log-semihosting", "custom-ivt"]

[[example]]
name = "irq_ack_test"
required-features = ["qemu", "log-semihosting", "custom-ivt"]

[[example]]
name = "irq_kernel_clears_test"
required-features = ["qemu", "log-semihosting", "custom-ivt"]

[[example]]
name = "irq_simultaneous_test"
required-features = ["qemu", "log-semihosting", "custom-ivt"]

[[example]]
name = "irq_ack_multi_test"
required-features = ["qemu", "log-semihosting", "custom-ivt"]

[[example]]
name = "irq_ack_error_test"
required-features = ["qemu", "log-semihosting", "custom-ivt"]

[[example]]
name = "irq_clearbit_test"
required-features = ["qemu", "log-semihosting", "custom-ivt"]

[[example]]
name = "irq_mixed_model_test"
required-features = ["qemu", "log-semihosting", "custom-ivt"]

[[example]]
name = "irq_repend_stress_test"
required-features = ["qemu", "log-semihosting", "custom-ivt"]

[[example]]
name = "irq_unbound_test"
required-features = ["qemu", "log-semihosting", "custom-ivt"]

[[example]]
name = "irq_custom_handler_test"
required-features = ["qemu", "log-semihosting", "custom-ivt"]

[[example]]
name = "irq_ring_buffer_test"
required-features = ["qemu", "log-semihosting", "custom-ivt"]

[[example]]
name = "irq_ring_overflow_test"
required-features = ["qemu", "log-semihosting", "custom-ivt"]

[[example]]
name = "irq_disable_test"
required-features = ["qemu", "log-semihosting", "custom-ivt"]

[[example]]
name = "systick_preempt_test"
required-features = ["qemu", "log-semihosting", "custom-ivt"]

[[example]]
name = "uart_irq_demo"
required-features = ["qemu", "log-semihosting", "custom-ivt"]

[[example]]
name = "all_syscalls_smoke_test"
required-features = ["qemu", "log-semihosting", "ipc-blackboard"]

[[example]]
name = "smoke_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "boot_banner_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "peripheral_passthrough"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "debug_boot"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "hw_integration"

[[example]]
name = "mpu_dynamic"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "mpu_dynamic_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "buffer_pool_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "buf_lend_rw_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "buf_lend_ro_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "peripheral_buf_lend_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "single_periph_boot_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "buf_transfer_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "buf_lend_addr_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "buf_align_boot_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "buf_deadline_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "buf_error_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "virtual_uart_demo"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "uart1_loopback"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "mpu_precompute_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "mpu_periph_precompute_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "mpu_dynamic_base_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "mpu_cached_dynamic_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "pendsv_primask_dynamic_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "plib_abi_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "plib_mutex_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "plib_sem_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "plib_msg_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "plib_event_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "plib_sampling_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "plib_queuing_status_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "plib_queuing_timed_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "plib_queuing_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "plib_bb_test"
required-features = ["qemu", "log-semihosting", "ipc-blackboard"]

[[example]]
name = "plib_buf_lend_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "plib_buf_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "plib_debug_print_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "plib_irq_ack_test"
required-features = ["qemu", "log-semihosting", "custom-ivt"]

[[example]]
name = "plib_dev_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "plib_dev_read_timed_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "plib_query_bh_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "plib_sleep_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "hw_fpu_isolation"
required-features = ["qemu", "log-semihosting", "fpu-context"]

[[example]]
name = "bench_context_switch"
required-features = ["qemu", "log-semihosting", "fpu-context"]

[[example]]
name = "callee_save_check"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "pendsv_primask_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "pendsv_primask_leak_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "svcall_primask_clear_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "svcall_basepri_clear_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "svcall_primask_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "tick_fairness_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "starvation_detect_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "dropped_tick_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "pendstclr_systick_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "starvation_counter_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "pendsv_stack_overflow_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "adversarial_mod_stub"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "read_kernel_mem"
path = "examples/adversarial/read_kernel_mem.rs"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "read_other_stack"
path = "examples/adversarial/read_other_stack.rs"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "write_other_stack"
path = "examples/adversarial/write_other_stack.rs"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "stack_guard"
path = "examples/adversarial/stack_guard.rs"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "write_mpu_regs"
path = "examples/adversarial/write_mpu_regs.rs"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "syscall_other_ptr"
path = "examples/adversarial/syscall_other_ptr.rs"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "syscall_bad_ptrs"
path = "examples/adversarial/syscall_bad_ptrs.rs"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "syscall_bad_ids"
path = "examples/adversarial/syscall_bad_ids.rs"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "disable_interrupts"
path = "examples/adversarial/disable_interrupts.rs"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "write_kernel_mem"
path = "examples/adversarial/write_kernel_mem.rs"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "write_control"
path = "examples/adversarial/write_control.rs"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "syscall_kernel_ptr"
path = "examples/adversarial/syscall_kernel_ptr.rs"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "adversarial_survive"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "fault_restart_exhaust_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "all_faulted_idle_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "error_handler_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "run_count_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "health_partition_test"
required-features = ["qemu", "log-semihosting", "health-partition"]

[[example]]
name = "health_stall_detect_test"
required-features = ["qemu", "log-semihosting", "health-partition"]

[[example]]
name = "builder_periph_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "asymmetric_periph_test"
required-features = ["qemu", "log-semihosting"]

[[example]]
name = "qemu_pac_uart0"
required-features = ["qemu", "log-semihosting", "qemu-peripherals"]

[[example]]
name = "qemu_pac_i2c0"
required-features = ["qemu", "log-semihosting", "qemu-peripherals"]

[[example]]
name = "qemu_pac_adc0"
required-features = ["qemu", "log-semihosting", "qemu-peripherals"]

[[example]]
name = "qemu_pac_ssi0"
required-features = ["qemu", "log-semihosting", "qemu-peripherals"]

[[example]]
name = "qemu_pac_timer0_periodic"
required-features = ["qemu", "log-semihosting", "qemu-peripherals"]

[[example]]
name = "qemu_pac_timer0_pwm"
required-features = ["qemu", "log-semihosting", "qemu-peripherals"]

[[example]]
name = "qemu_pac_pwm0"
required-features = ["qemu", "log-semihosting", "qemu-peripherals"]

[[example]]
name = "qemu_pac_pwm0_deadband"
required-features = ["qemu", "log-semihosting", "qemu-peripherals"]

[[example]]
name = "qemu_pac_pwm0_multichannel"
required-features = ["qemu", "log-semihosting", "qemu-peripherals"]

[[example]]
name = "qemu_pac_timer0_capture"
required-features = ["qemu", "log-semihosting", "qemu-peripherals"]

[[example]]
name = "qemu_pac_timer_chain"
required-features = ["qemu", "log-semihosting", "qemu-peripherals"]

[features]
default = ["arinc-compat"]

# IPC primitives (optional, enabled via arinc-compat by default)
ipc-sampling = []
ipc-queuing = []
ipc-blackboard = ["plib/ipc-blackboard"]
ipc-message = []

# ARINC 653 compatibility: enables all optional IPC primitives
arinc-compat = ["ipc-sampling", "ipc-queuing", "ipc-blackboard", "ipc-message"]

# Omit the built-in minimal __INTERRUPTS vector table so that a
# custom one (e.g. from bind_interrupts!) can be linked instead.
custom-ivt = []
qemu = []
qemu-peripherals = ["dep:tudelft-lm3s6965-pac"]
partition-debug = ["rtos-traits/partition-debug"]
panic-halt = ["dep:panic-halt"]
log-semihosting = ["dep:cortex-m-semihosting", "dep:panic-semihosting"]
log-rtt = ["dep:rtt-target", "dep:panic-rtt-target", "dep:critical-section"]
log-swo = []
log-defmt = ["dep:defmt"]

# Multi-core: removes StaticIsrRing Sync impl (IRQ-masking insufficient on SMP).
# Use `single-core` as an explicit override when both are enabled (--all-features).
multi-core = []
single-core = []

# FPU context: save/restore FPU registers on context switch (Cortex-M4F+).
fpu-context = []

# Health monitoring for partition liveness and schedule integrity.
health-partition = []

# Mock HAL register bank for host-mode tests.
mock-hal = ["rtos-traits/mock-hal"]

# Loom concurrency model-checking (host-mode only).
loom = ["dep:loom"]

# SEGGER SystemView tracing via rtos-trace.
trace = ["dep:rtos-trace", "dep:systemview-target", "dep:rtt-target", "dep:critical-section"]

# Write panic diagnostics into a .noinit tombstone before the panic backend runs.
panic-tombstone = []


[target.'cfg(not(target_arch = "arm"))'.dependencies]
loom = { version = "0.7", optional = true }

[target.'cfg(target_arch = "arm")'.dependencies]
systemview-target = { version = "0.3", default-features = false, features = ["cortex-m", "callbacks-os", "ext-rtt-channels-2"], optional = true } # TODO: reviewer false positive – v0.3.0 only provides ext-rtt-channels-2, not ext-rtt-channels-1

[dev-dependencies]
plib = { path = "../plib" }

[target.'cfg(not(target_arch = "arm"))'.dev-dependencies]
rtos-traits = { path = "../rtos-traits", features = ["mock-hal"] }
trybuild = "1"

[target.'cfg(not(target_arch = "arm"))'.dev-dependencies.loom]
version = "0.7"
