[package]
name = "plib"
version = "0.1.0"
edition = "2021"
description = "Partition library: user-space helpers for partitions"

[dependencies]
rtos-traits = { path = "../rtos-traits" }

[features]
default = []
partition-debug = ["rtos-traits/partition-debug"]
dynamic-mpu = ["rtos-traits/dynamic-mpu"]
# TODO: rtos-traits defines blackboard syscall constants unconditionally, so
# there is nothing to propagate today.  If rtos-traits gains an ipc-blackboard
# feature gate, propagate it here: ipc-blackboard = ["rtos-traits/ipc-blackboard"]
ipc-blackboard = []
