[package]
name = "plib"
version = "0.1.0"
edition = "2021"
description = "Partition library: user-space helpers for partitions"

[dependencies]
rtos-traits = { path = "../rtos-traits" }
embedded-hal = { version = "0.2", optional = true }

[features]
default = []
partition-debug = ["rtos-traits/partition-debug"]
dynamic-mpu = ["rtos-traits/dynamic-mpu"]
# Gates blackboard wrapper functions in plib; raw constants in rtos-traits are
# intentionally unconditional (harmless without the wrapper API).
ipc-blackboard = []
qemu-peripherals = ["dep:embedded-hal"]
