[package]
name = "plib"
version = "0.1.0"
edition = "2021"
description = "Partition library: user-space helpers for partitions"

[dependencies]
rtos-traits = { path = "../rtos-traits" }

[features]
default = []
partition-debug = ["rtos-traits/partition-debug"]
# Gates blackboard wrapper functions in plib; raw constants in rtos-traits are
# intentionally unconditional (harmless without the wrapper API).
ipc-blackboard = []

[dev-dependencies]
rtos-traits = { path = "../rtos-traits", features = ["mock-hal"] }
