[package]
name = "porting_guide"
version = "0.1.0"
edition = "2021"

[dependencies]
kernel = { path = "../kernel" }
cortex-m = "0.7"
stm32f4xx-hal = { version = "0.23", features = ["stm32f407"], optional = true }
nrf52840-hal = { version = "0.19", optional = true }

[features]
# Debug channel selection (pass through to kernel)
log-rtt = ["kernel/log-rtt"]
log-semihosting = ["kernel/log-semihosting"]
log-swo = ["kernel/log-swo"]
log-defmt = ["kernel/log-defmt"]

# Board support
board-qemu = ["kernel/qemu"]
board-stm32f4-discovery = ["stm32f4xx-hal"]
board-nrf52840-dk = ["nrf52840-hal"]
